# chunk

./: .gitignore  README.md  pyproject.toml
.claude/rules/: setup.md
chunk/: __init__.py  base.py  cast.py  declaration.py  function.py  sliding.py  utils.py
configs/: ablation_java.yaml  ablation_overlap.yaml  cceval.yaml  cceval_pilot.yaml  repoeval.yaml  repoeval_pilot.yaml
eval/cceval/: ablation_java.py  code_completion.py  compute_score.py  eval_utils.py  fetch_dataset.py  make_window.py  retrieval.py  utils.py
eval/cceval/result/: ablation_java.csv  all_results.csv
eval/figure/: cceval_figures.ipynb  repoeval_figures.ipynb
eval/figure/output/: cceval_ablation_java_summary.csv  cceval_rq1_strategy_effect.csv  cceval_rq2a_method_retriever.csv  cceval_rq2a_method_retriever_EM.csv  cceval_rq2a_method_retriever_ES.csv  cceval_rq2b_method_generator.csv  cceval_rq2b_method_generator_EM.csv  cceval_rq2b_method_generator_ES.csv  repoeval_ablation_overlap_summary.csv  repoeval_positional_match_rate.csv  repoeval_prefix_match_summary.csv  repoeval_rq1_statistical_tests.csv  repoeval_rq1_strategy_effect.csv  repoeval_rq2a_method_retriever_api_EM.csv  repoeval_rq2a_method_retriever_api_ES.csv  repoeval_rq2a_method_retriever_line_ES.csv  repoeval_rq2b_method_generator_api_ES.csv  repoeval_rq2b_method_generator_line_ES.csv  repoeval_rq3_statistical_tests.csv  rq1_strategy_effect.csv  rq2a_method_retriever_api.csv  rq2a_method_retriever_line.csv  (+2 more)
eval/repoeval/: ablation_overlap.py  code_completion.py  compute_score.py  fetch_dataset.py  make_window.py  retrieval.py  utils.py
examples/: chunking.py
examples/outputs/: declaration_chunking_results.txt  function_chunking_results.txt  sliding_chunking_results.txt
scripts/: cceval_ablation_java.sh  cceval_chunking.sh  cceval_inference.sh  cceval_pilot.sh  cceval_retrieval.sh  cceval_score.sh  container.env  repoeval_ablation_overlap.sh  repoeval_chunking.sh  repoeval_inference.sh  repoeval_pilot.sh  repoeval_retrieval.sh  repoeval_score.sh  setup_container.sh  setup_venv.sh
(+3 files in other folders)
