[project]
name = "chunk"
version = "0.1.0"
description = "Structure-aware code chunking library"
requires-python = ">=3.11"
dependencies = [
    "astchunk",
    "numpy",
    "pyrsistent",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-typescript",
]

[tool.hatch.build.targets.wheel]
packages = ["chunk"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
