[project]
name = "chunk"
version = "0.1.0"
description = "Structure-aware code chunking library"
requires-python = "==3.12.*"
dependencies = [
    "astchunk",
    "numpy",
    "pyrsistent",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree-sitter-c-sharp",
    "tree-sitter-typescript",
]

[project.optional-dependencies]
eval = [
    "bm25s",
    "editdistance",
    "faiss-cpu",
    "pyyaml",
    "requests",
    "sentence-transformers",
    "thefuzz",
    "tqdm",
    "transformers>=4.57",
    "vllm>=0.17",
]
dev = [
    "ipykernel",
    "matplotlib",
    "pandas",
    "scipy",
    "seaborn"
]

[tool.hatch.build.targets.wheel]
packages = ["chunk", "eval"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
find-links = ["https://download.pytorch.org/whl/cu124"]
